Modification pour la scène du musée et suppresion du ficher de son.

--- a/point/musee/index.html
+++ b/point/musee/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Musée</title>
     <meta name ="description" content="Musée - A-Frame">
+    <meta name="author" content="Niko Girardelli">
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
     <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
@@ -12,7 +13,6 @@
     <script src="https://unpkg.com/aframe-slice9-component/dist/aframe-slice9-component.min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/lire-csv.js"></script>
-    <script src="components/phase-shift.js"></script>
     <script src="components/rafraichissement.js"></script>
     <script src="components/statue.js"></script>
     <script src="components/pays-selection.js"></script>
