Site fini avec les images et les liens aux vidéos. Les liens lancent les démos.

--- a/gapmindervr/index.html
+++ b/gapmindervr/index.html
@@ -53,46 +53,40 @@
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
+          <img src="media/railoftime_media/railoftime_01.jpg" alt="01" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
+          <img src="media/railoftime_media/railoftime_02.jpg" alt="02" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
+          <img src="media/railoftime_media/railoftime_03.jpg" alt="03" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
+          <img src="media/railoftime_media/railoftime_04.jpg" alt="04" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
+          <img src="media/railoftime_media/railoftime_05.jpg" alt="05" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
+          <img src="media/railoftime_media/railoftime_06.jpg" alt="06" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-12 videoDemo">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gLHxcnhv3R8"></iframe>
         </div>
       </div>
-      <a class="btn" href="index.html" target="_blank">Try demo</a>
+      <a class="btn" href="demo/egocenter_graphe/index.html" target="_blank">Try demo</a>
     </div>
   </div>
 </div>
@@ -105,47 +99,41 @@
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
+          <img src="media/musee_media/museum_01.jpg" alt="01" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
+          <img src="media/musee_media/museum_07.jpg" alt="07" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
+          <img src="media/musee_media/museum_03.jpg" alt="03" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
+          <img src="media/musee_media/museum_04.jpg" alt="04" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
+          <img src="media/musee_media/museum_05.jpg" alt="05" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
+          <img src="media/musee_media/museum_06.jpg" alt="06" width="400" height="300">
         </div>
       </div>
       <div class="col-sm-12 videoDemo">
         <div class="embed-responsive embed-responsive-16by9" margin-bottom="20px">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9TDK4T5ZfEE"></iframe>
         </div>
       </div>
       <div class="col-sm-12">
-        <a class="btn" href="index.html" target="_blank">Try demo</a>
+        <a class="btn" href="demo/musee/index.html" target="_blank">Try demo</a>
       </div>
     </div>
   </div>
